# rust_book

content/: lifetime.rs  ownership.rs  slices.rs  string.rs  struct.rs  struct_exmpl.rs  vars.rs
content/adder/tests/: integration_tests.rs
content/adder/tests/common/: mod.rs
content/blog/src/: lib.rs  main.rs
content/excercises/src/: main.rs
content/gui/src/: lib.rs
content/hello_macro/hello_macro_derive/src/: lib.rs
content/hello_macro/src/: lib.rs
content/interior_mutability/src/: lib.rs  main.rs
content/macro_test/: Cargo.toml
content/macro_test/src/: main.rs
content/principies/: advanced_functions.rs  advanced_types.rs  closures.rs  drop.rs  enum_examples.rs  enums.rs  expression.rs  generics.rs  hash_map.rs  interior_mutability.rs  iterators.rs  memory_leaks.rs  multiple_ownership.rs  panic.rs  patterns.rs  preventing_memory_leaks.rs  smart_pointers.rs  threads.rs  threads_mutex.rs  unsafe.rs  vector.rs
content/principies/traits/: advanced_traits.rs  send.rs  sync.rs
content/principies/treads/: deref.rs
content/profiles/: Cargo.toml
content/profiles/src/: lib.rs
content/restraunt/src/: lib.rs
content/tests/src/: lib.rs
content/traitrs/: Cargo.toml
content/traitrs/src/: example.rs  lib.rs
content/workspaces/adder/src/: main.rs
guessing_game/src/: main.rs
minigrep/src/: lib.rs  main.rs
server/pages/: hello.html
server/src/: lib.rs  main.rs
