[package]
name = "profiles"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

# opt-level is the optimization level(3 is the most optimized)
[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
